--- a/gui/app/src/main/resources/sis/gui/view/login-region.fxml
+++ b/gui/app/src/main/resources/sis/gui/view/login-region.fxml
@@ -7,7 +7,7 @@
 <VBox xmlns="http://javafx.com/javafx/17.0.9" 
       xmlns:fx="http://javafx.com/fxml/1" 
       alignment="CENTER" spacing="10"
-      fx:controller = "sis.gui.controller.LoginController">
+      fx:controller = "sis.gui.controller.LogInRegionController">
     <Label text="Sign in" style="-fx-font-size: 18px;"/>
     <HBox prefWidth="100.0" alignment="CENTER">
       <TextField fx:id="usernameField" promptText="Username"/>
